css/layout.css
/**
*	Hendrie (HTML)
*	Copyright © Hendrie by beshleyua. All Rights Reserved.
**/

/* TABLE OF CONTENTS
	1. Header
	2. Section
	3. Started
	4. About
	5. Services
	6. Portfolio
	7. Contacts
	8. Footer
	9. Popups
*/

/* 1. Header */
.header {
	padding: 50px 0;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	z-index: 20;
	opacity: 1;
	visibility: visible;
	transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-webkit-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
}

.header.filled {
	padding: 35px 0;
	background: #ffffff;
	opacity: 1;
	visibility: visible;
	box-shadow: 0 25px 50px rgba(0, 0, 0, 0.045);
	-moz-box-shadow: 0 25px 50px rgba(0, 0, 0, 0.045);
	-webkit-box-shadow: 0 25px 50px rgba(0, 0, 0, 0.045);
	-khtml-box-shadow: 0 25px 50px rgba(0, 0, 0, 0.045);
}

@media (max-width: 1079px) {
	.header.filled {
		padding: 30px 0;
	}

}

.header.filled .logo a {
	color: #292929;
}

.header.filled .menu-btn span {
	background: #292929;
}

.header.filled .menu-btn span:before,
.header.filled .menu-btn span:after {
	background: #292929;
}

.header.filled .top-menu ul li a {
	color: #292929;
}

@media (max-width: 1079px) {
	.header {
		padding: 30px 0;
	}

}

.header .fw {
	padding: 0 5%;
	max-width: 100%;
}

.header .logo {
	float: left;
	font-family: 'Montserrat', helvetica;
	font-size: 34px;
	font-weight: 700;
}

.header .logo a {
	color: #ffffff;
}

.header .menu-btn {
	position: relative;
	float: right;
	display: none;
	width: 24px;
	height: 24px;
	transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-webkit-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
}

@media (max-width: 1079px) {
	.header .menu-btn {
		display: block;
	}

}

.header .menu-btn span {
	margin-top: -1px;
	position: absolute;
	top: 50%;
	left: 0;
	width: 100%;
	height: 2px;
	background: #ffffff;
	transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-webkit-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
}

.header .menu-btn span:before,
.header .menu-btn span:after {
	content: '';
	position: absolute;
	left: 0;
	top: -8px;
	width: 100%;
	height: 2px;
	background: #ffffff;
	transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-webkit-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
}

.header .menu-btn span:after {
	top: auto;
	bottom: -8px;
}

.header .menu-btn.active {
	margin-right: 225px;
}

.header .menu-btn.active span {
	background: none;
}

.header .menu-btn.active span:before {
	top: 0;
	transform: rotate(45deg);
	-webkit-transform: rotate(45deg);
	-moz-transform: rotate(45deg);
	-o-transform: rotate(45deg);
}

.header .menu-btn.active span:after {
	bottom: 0;
	transform: rotate(-45deg);
	-webkit-transform: rotate(-45deg);
	-moz-transform: rotate(-45deg);
	-o-transform: rotate(-45deg);
}

.header .top-menu {
	float: right;
	transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-webkit-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
}

.header .top-menu.active {
	right: 0;
}

.header .top-menu ul li {
	margin-left: 40px;
	display: inline-block;
	vertical-align: top;
}

.header .top-menu ul li a {
	padding: 2px 0 0 0;
	position: relative;
	display: block;
	font-size: 12px;
	color: #ffffff;
	letter-spacing: 0.2em;
	font-weight: 500;
	line-height: 12px;
	text-transform: uppercase;
	box-shadow: inset 0 0 0 #ede574;
	-moz-box-shadow: inset 0 0 0 #ede574;
	-webkit-box-shadow: inset 0 0 0 #ede574;
	-khtml-box-shadow: inset 0 0 0 #ede574;
	transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-webkit-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
}

.header .top-menu ul li:hover a,
.header .top-menu ul li.active a {
	box-shadow: inset 0 -6px 0 #ede574;
	-moz-box-shadow: inset 0 -6px 0 #ede574;
	-webkit-box-shadow: inset 0 -6px 0 #ede574;
	-khtml-box-shadow: inset 0 -6px 0 #ede574;
}

@media (max-width: 1079px) {
	.header .top-menu {
		padding: 50px 30px;
		position: fixed;
		top: 0;
		right: -230px;
		width: 230px;
		height: 100%;
		background: #ffffff;
	}

	.header .top-menu ul li {
		margin-left: 0;
		margin-bottom: 15px;
		display: block;
	}

	.header .top-menu ul li a {
		display: inline-block;
		color: #292929;
	}

	.header .top-menu .close {
		display: block;
	}

}

/* 2. Section */
.section {
	padding: 180px 0;
	position: relative;
}

@media (max-width: 1079px) {
	.section {
		padding: 120px 0;
	}

}

@media (max-width: 720px) {
	.section {
		padding: 90px 0;
	}

}

.section.gray {
	padding: 180px 0;
	background: #f9f9f9;
}

@media (max-width: 1079px) {
	.section.gray {
		padding: 120px 0;
	}

}

@media (max-width: 720px) {
	.section.gray {
		padding: 90px 0;
	}

}

.section .titles .title {
	margin: 0 0 30px 0;
	font-family: 'Eczar', helvetica;
	color: #292929;
	font-size: 34px;
	line-height: 44px;
	font-weight: 400;
}

@media (max-width: 1079px) {
	.section .titles .title {
		font-size: 28px;
	}

}

/* 3. Started */
.section.started {
	padding: 0;
	background: #ede574;
}

.section.started .slide {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background-position: center center;
	background-repeat: no-repeat;
	background-size: cover;
}

.section.started .st-title,
.section.started .typed-title,
.section.started .typed-cursor {
	margin: 20px 0 10px 0;
	font-size: 7.91666667vw;
	font-family: 'Montserrat', helvetica;
	line-height: 7.91666667vw;
	color: #ffffff;
	font-weight: 400;
	letter-spacing: 0.1em;
	text-transform: uppercase;
	transition: all 0.4s ease 0s;
	-moz-transition: all 0.4s ease 0s;
	-webkit-transition: all 0.4s ease 0s;
	-o-transition: all 0.4s ease 0s;
}

@media (max-width: 720px) {
	.section.started .st-title,
	.section.started .typed-title,
	.section.started .typed-cursor {
		font-size: 8vw;
		font-weight: 700;
	}

}

.section.started .mouse-btn {
	margin-left: -10px;
	text-align: center;
	position: absolute;
	width: 20px;
	height: 40px;
	left: 50%;
	bottom: 40px;
}
/* ... */

